--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -30,7 +30,7 @@
 
 <section class="home-page top-bar-search">
   <%= link_to search_path, class: "search-link" do %>
-    <input id="workSearch" name="query" autocomplete="off" class="search-top-bar" type="search" placeholder="Rechercher une référence">
+    <input id="workSearch" name="query" autocomplete="off" class="search-top-bar" type="search"                placeholder="<%= t('search.placeholder') %>">
 <% end %>
 <div class="top-bar-flex">
   <div class="circle circle-notif" id="openPopup">
@@ -53,15 +53,37 @@
       <% end %>
     </div>
   <% end %>
+
+  <button data-controller="lang-switcher" class="lang-switcher" data-action="click->lang-switcher#toggle">
+    <span class="lang-icon">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8.82263 6.50977C8.82263 10.8194 6.63857 12.9761 3.94531 12.9761M3.94531 6.50977H10.7736" stroke="white" stroke-width="1.95093" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M4.9209 9.07349C4.9209 11.1649 7.11764 12.8856 10.7737 12.9753M11.7491 19.8036L15.651 11.0244L19.5529 19.8036M18.6749 17.8527H12.6271M6.57333 3.2207L7.34688 3.78842" stroke="white" stroke-width="1.95093" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </span>
+      </span>
+      <span class="lang-label" data-lang-switcher-target="current"><%= I18n.locale.to_s.upcase %></span>
+      <span class="lang-arrow">
+    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M4.83984 6.80664L9.22632 11.1931L13.6128 6.80664" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+      </span>
+      <div class="lang-dropdown" data-lang-switcher-target="dropdown">
+        <%= link_to "FR", url_for(locale: :fr), class: "lang-option", data: { action: "click->lang-switcher#select", lang_switcher_target: "option", lang: "FR" } %>
+        <%= link_to "EN", url_for(locale: :en), class: "lang-option", data: { action: "click->lang-switcher#select", lang_switcher_target: "option", lang: "EN" } %>
+      </div>
+  </button>
 </div>
+
+
 </section>
 <div id="designers">
   <div class="home-flex" id="cardContainer">
     <div class="nav-home-mobile">
       <%= image_tag("logo.svg", alt: "Logo", class: "logo-img") %>
       <div class="switch-home-mobile">
-        <%= link_to "Designers", designers_path, class: "active"  %>
-        <%= link_to "Références", oeuvres_path%>
+        <%= link_to t('global.designers'), designers_path, class: "active"  %>
+        <%= link_to t('global.references'), oeuvres_path%>
       </div>
       <%= link_to search_path,  aria: { label: "Rechercher" } do %>
         <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -70,8 +92,8 @@
       <%end%>
     </div>
     <div class="switch-home">
-      <%= link_to "Designers", designers_path, class: "active" %>
-      <%= link_to "Références", oeuvres_path %>
+      <%= link_to t('global.designers'), designers_path, class: "active" %>
+      <%= link_to t('global.references'), oeuvres_path %>
     </div>
     <div class="box-card" id="boxCard">
       <%= render partial: 'designers/card', collection: @designers, as: :card, locals: { class_name: 'card' } %>
@@ -220,23 +242,20 @@
 <div id="popup" class="popup">
   <div class="popup-content">
     <div class="top-popup">
-      <svg class="close-popup" id="closePopupSave" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <svg class="close-popup" id="closePopup" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
       </svg>
     </div>
     <div class="popup-inner">
-      <p class="title-popup">Omniscient design</p>
+      <p class="title-popup"><%= t('mainpopup.title') %></p>
       <div class="popup-decoration">
         <%= image_tag("logo-white.svg", :alt => "logo omniscient design") %>
       </div>
-      <p class="subtitle-popup">Découvrir le projet</p>
-      <p>Omniscient Design est né de la volonté de centraliser, sur une plateforme unique, toutes les connaissances liées au monde du design. Qu'il s'agisse de design d'objet, de stylisme ou de scénographie, Omniscient Design aspire à rendre chaque travail, chaque projet et chaque référence aussi accessibles et complets que possible.
-      <br><br>
-      Notre mission est de favoriser le partage, l'exploration et l'enrichissement des savoirs dans tous les domaines du design, en mettant à disposition des ressources exhaustives et facilement consultables, que ce soit pour les étudiants, les professionnels ou les passionnés.</p>
+      <p class="subtitle-popup"><%= t('mainpopup.subtitle_project') %></p>
+      <p><%= t('mainpopup.description_project').gsub("\n", "<br>").html_safe %></p>
       <%= link_to presentation_url, class: "button dark" do %>
-        En savoir plus
+       <%= t('mainpopup.button_project') %>
       <%end%>
-     
       <div class="popup-decoration">
         <svg width="186" height="46" viewBox="0 0 186 46" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_3317_340)">
@@ -261,10 +280,10 @@
           </defs>
         </svg>
       </div>
-      <p class="subtitle-popup">Vos feedbacks</p>
-      <p>Vos retours sont essentiels pour nous ! Partagez vos impressions, suggestions et commentaires pour nous aider à améliorer Omniscient Design. Votre avis est précieux et nous guide dans l'optimisation de notre plateforme. Merci de faire partie de cette aventure !</p>
+      <p class="subtitle-popup"><%= t('mainpopup.subtitle_feedback') %></p>
+     <p><%= t('mainpopup.description_feedback') %></p>
         <%= link_to new_feedback_url, class: "button dark" do %>
-        Donner votre avis
+         <%= t('mainpopup.button_feedback') %>
         <%end%>
     </div>
   </div>
