--- a/app/views/pages/plan-site.html.erb
+++ b/app/views/pages/plan-site.html.erb
@@ -143,7 +143,7 @@
           <path d="M13.3333 16.333L17.5 12.1663L13.3333 7.99967" stroke="black" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
           <path d="M17.5 12.167H10.8333C6.23083 12.167 2.5 8.43616 2.5 3.83366V3.00033" stroke="black" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
-        <%= link_to "Signaler un problème", bug_reports_new_path, class: "plan-sub-link" %>
+        <%= link_to "Signaler un problème", new_bug_report_path, class: "plan-sub-link" %>
       </div>
       <div class="plan-sub-links">
         <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
