--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -34,44 +34,45 @@
       <path d="M12.632 6.94488C12.632 6.94488 6.63067 12.9516 4.29333 15.2902C4.09733 15.4849 4 15.7409 4 15.9969C4 16.2529 4.09733 16.5089 4.29333 16.7035C6.62933 19.0422 12.6293 25.0462 12.6293 25.0462C12.8227 25.2395 13.0773 25.3355 13.332 25.3355C13.5867 25.3342 13.8427 25.2369 14.0387 25.0409C14.4293 24.6502 14.4307 24.0196 14.044 23.6316L7.40933 16.9969H26.9987C27.5507 16.9969 27.9987 16.5489 27.9987 15.9969C27.9987 15.4449 27.5507 14.9969 26.9987 14.9969H7.40933L14.0467 8.35822C14.432 7.97288 14.4293 7.34355 14.0387 6.95288C13.8427 6.75688 13.5867 6.65822 13.332 6.65822C13.0773 6.65688 12.8253 6.75288 12.632 6.94488Z" fill="white"/>
     </svg>
   <%end%>
-  <h1>Votre compte</h1>
+  <h1><%= t('edit_profile.account') %></h1>
 </section>
 <section class="grid-1 profil">
-  <h2>Profil public</h2>
-  <p class="desc-profil">Les informations figurant dans le profil public sont accessibles à tous. Pour les supprimer ou les modifier, veuillez vous modifier les informations ci-dessous </p>
+  <h2><%= t('edit_profile.public_profile') %></h2>
+  <p class="desc-profil"><%= t('edit_profile.public_desc') %></p>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
     <div class="flex-form" style="margin-top: 32px;">
       <%= render "users/shared/error_messages", resource: resource %>
       <div class="field">
-        <%= f.label "Prénom" %>
+        <%= f.label t('edit_profile.first_name') %>
         <%= f.text_field :firstname, autocomplete: "firstname", placeholder: "Prénom" %>
       </div>
       <div class="field">
-        <%= f.label "Nom de famille" %>
+        <%= f.label t('edit_profile.last_name') %>
         <%= f.text_field :lastname, autocomplete: "lastname", placeholder: "Nom de famille" %>
       </div>
       <div class="field">
-        <%= f.label "Pseudo" %>
+        <%= f.label t('edit_profile.username') %>
         <%= f.text_field :pseudo, autocomplete: "pseudo", placeholder: "Pseudo" %>
       </div>
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
       <div class="field">
-        <%= f.label "Mot de passe" %>
-        <i>(Ne pas remplir si vous ne souhaitez pas le changer)</i>
+        <%= f.label t('edit_profile.password') %>
+        <i>(<%= t('edit_profile.password_hint') %>)</i>
         <div class="password-container" data-controller="show-password">
           <%= f.password_field :password, 
                 autocomplete: "new-password", 
                 id: "password-field-1", 
                 data: { "show-password-target": "passwordField" } %>
             <button type="button" data-action="click->show-password#toggle" class="toggle-password">
-              <svg class="show-password-icon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M15.9972 6.66699C10.5598 6.66699 5.6745 10.791 2.85984 15.311C2.73184 15.523 2.6665 15.7617 2.6665 16.0003C2.6665 16.239 2.7305 16.4777 2.8585 16.6897C5.6745 21.2097 10.5598 25.3337 15.9972 25.3337C21.5212 25.3337 26.3918 21.2137 29.1492 16.6763C29.2718 16.4683 29.3332 16.2337 29.3332 16.0003C29.3332 15.767 29.2718 15.5323 29.1492 15.3243C26.3918 10.787 21.5212 6.66699 15.9972 6.66699ZM15.9998 10.667C18.9438 10.667 21.3332 13.0563 21.3332 16.0003C21.3332 18.9443 18.9438 21.3337 15.9998 21.3337C13.0558 21.3337 10.6665 18.9443 10.6665 16.0003C10.6665 13.0563 13.0558 10.667 15.9998 10.667ZM15.9998 12.667C17.8398 12.667 19.3332 14.1603 19.3332 16.0003C19.3332 17.8403 17.8398 19.3337 15.9998 19.3337C14.1598 19.3337 12.6665 17.8403 12.6665 16.0003C12.6665 14.1603 14.1598 12.667 15.9998 12.667Z" fill="#202020"/>
-              </svg>
-              <svg class="hide-password-icon" style="display: none;" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M22.7585 8.72767L26.3372 5.58234C26.5278 5.41567 26.7638 5.33301 26.9998 5.33301C27.5572 5.33301 27.9998 5.78634 27.9998 6.33301C27.9998 6.60901 27.8852 6.88501 27.6612 7.08234L5.66117 26.417C5.47184 26.585 5.23584 26.6663 4.99984 26.6663C4.4465 26.6663 3.99984 26.221 3.99984 25.6663C3.99984 25.3903 4.1145 25.1143 4.33717 24.917L7.58784 22.0597C5.7025 20.5503 4.08517 18.657 2.8585 16.689C2.7305 16.477 2.6665 16.2383 2.6665 15.9997C2.6665 15.761 2.73184 15.5223 2.85984 15.3103C5.6745 10.7903 10.5598 6.66634 15.9972 6.66634C18.4172 6.66634 20.7118 7.45701 22.7585 8.72767ZM25.8492 11.1677C27.1385 12.425 28.2545 13.8517 29.1492 15.3237C29.2718 15.5317 29.3332 15.7663 29.3332 15.9997C29.3332 16.233 29.2718 16.4677 29.1492 16.6757C26.3918 21.213 21.5212 25.333 15.9972 25.333C14.2665 25.333 12.5932 24.9157 11.0238 24.201L14.5225 21.125C14.9918 21.261 15.4878 21.333 15.9998 21.333C18.9438 21.333 21.3332 18.9437 21.3332 15.9997C21.3332 15.725 21.3118 15.4557 21.2718 15.1917L25.8492 11.1677ZM19.2732 11.7903C18.3692 11.0863 17.2332 10.6663 15.9998 10.6663C13.0558 10.6663 10.6665 13.0557 10.6665 15.9997C10.6665 16.9877 10.9358 17.913 11.4038 18.7063L12.9505 17.3477C12.7678 16.9343 12.6665 16.4797 12.6665 15.9997C12.6665 14.1597 14.1598 12.6663 15.9998 12.6663C16.6318 12.6663 17.2238 12.8423 17.7278 13.149L19.2732 11.7903Z" fill="#202020"/>
-              </svg>
+              <svg class="show-password-icon" data-show-password-target="showIcon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M15.9972 6.66699C10.5598 6.66699 5.6745 10.791 2.85984 15.311C2.73184 15.523 2.6665 15.7617 2.6665 16.0003C2.6665 16.239 2.7305 16.4777 2.8585 16.6897C5.6745 21.2097 10.5598 25.3337 15.9972 25.3337C21.5212 25.3337 26.3918 21.2137 29.1492 16.6763C29.2718 16.4683 29.3332 16.2337 29.3332 16.0003C29.3332 15.767 29.2718 15.5323 29.1492 15.3243C26.3918 10.787 21.5212 6.66699 15.9972 6.66699ZM15.9998 10.667C18.9438 10.667 21.3332 13.0563 21.3332 16.0003C21.3332 18.9443 18.9438 21.3337 15.9998 21.3337C13.0558 21.3337 10.6665 18.9443 10.6665 16.0003C10.6665 13.0563 13.0558 10.667 15.9998 10.667ZM15.9998 12.667C17.8398 12.667 19.3332 14.1603 19.3332 16.0003C19.3332 17.8403 17.8398 19.3337 15.9998 19.3337C14.1598 19.3337 12.6665 17.8403 12.6665 16.0003C12.6665 14.1603 14.1598 12.667 15.9998 12.667Z" fill="#202020"/>
+            </svg>
+            <svg class="hide-password-icon" data-show-password-target="hideIcon" style="display: none;" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <line x1="7.64315" y1="28.4933" x2="20.0066" y2="2.2608" stroke="#202020" stroke-width="3"/>
+              <path d="M22.1016 8.34375C25.0132 9.96161 27.4726 12.565 29.1494 15.3242C29.2719 15.5321 29.333 15.7668 29.333 16C29.333 16.2334 29.272 16.4688 29.1494 16.6768C26.392 21.2141 21.521 25.334 15.9971 25.334C15.3793 25.334 14.7692 25.2778 14.168 25.1768L15.9795 21.333C15.9863 21.333 15.9932 21.334 16 21.334C18.9439 21.3339 21.333 18.9439 21.333 16C21.3329 14.7041 20.8691 13.5162 20.0996 12.5918L22.1016 8.34375ZM15.9971 6.66699C17.1437 6.66699 18.2615 6.84701 19.3389 7.16895L17.5781 10.9053C17.0793 10.7508 16.5494 10.667 16 10.667C13.0561 10.667 10.6672 13.0561 10.667 16C10.667 17.864 11.6252 19.5052 13.0752 20.459L11.2617 24.3047C7.797 22.8028 4.8234 19.8435 2.8584 16.6895C2.73049 16.4775 2.66602 16.2386 2.66602 16C2.66607 15.7615 2.73143 15.5225 2.85938 15.3105C5.67402 10.7906 10.5598 6.66706 15.9971 6.66699ZM19.0859 14.7422C19.2445 15.1305 19.333 15.5549 19.333 16C19.333 17.494 18.3484 18.7594 16.9932 19.1826L19.0859 14.7422ZM16 12.667C16.244 12.667 16.4818 12.6933 16.7109 12.7432L13.9414 18.6201C13.1659 18.0094 12.667 17.0629 12.667 16C12.6672 14.1601 14.1601 12.667 16 12.667Z" fill="#202020"/>
+            </svg>
              </button>
           </button>
         </div>
@@ -80,7 +81,7 @@
         <% end %>
       </div>
       <div class="field ">
-        <%= f.label "Confirmer mot de passe" %>
+        <%= f.label t('edit_profile.password_confirmation') %>
         <div class="password-container" data-controller="show-password">
   <%= f.password_field :password_confirmation, 
         autocomplete: "new-password", 
@@ -89,43 +90,49 @@
 
            <button type="button" 
           data-action="click->show-password#toggle" class="toggle-password">
-            <svg class="show-password-icon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+             <svg class="show-password-icon" data-show-password-target="showIcon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M15.9972 6.66699C10.5598 6.66699 5.6745 10.791 2.85984 15.311C2.73184 15.523 2.6665 15.7617 2.6665 16.0003C2.6665 16.239 2.7305 16.4777 2.8585 16.6897C5.6745 21.2097 10.5598 25.3337 15.9972 25.3337C21.5212 25.3337 26.3918 21.2137 29.1492 16.6763C29.2718 16.4683 29.3332 16.2337 29.3332 16.0003C29.3332 15.767 29.2718 15.5323 29.1492 15.3243C26.3918 10.787 21.5212 6.66699 15.9972 6.66699ZM15.9998 10.667C18.9438 10.667 21.3332 13.0563 21.3332 16.0003C21.3332 18.9443 18.9438 21.3337 15.9998 21.3337C13.0558 21.3337 10.6665 18.9443 10.6665 16.0003C10.6665 13.0563 13.0558 10.667 15.9998 10.667ZM15.9998 12.667C17.8398 12.667 19.3332 14.1603 19.3332 16.0003C19.3332 17.8403 17.8398 19.3337 15.9998 19.3337C14.1598 19.3337 12.6665 17.8403 12.6665 16.0003C12.6665 14.1603 14.1598 12.667 15.9998 12.667Z" fill="#202020"/>
             </svg>
-            <svg class="hide-password-icon" style="display: none;" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M22.7585 8.72767L26.3372 5.58234C26.5278 5.41567 26.7638 5.33301 26.9998 5.33301C27.5572 5.33301 27.9998 5.78634 27.9998 6.33301C27.9998 6.60901 27.8852 6.88501 27.6612 7.08234L5.66117 26.417C5.47184 26.585 5.23584 26.6663 4.99984 26.6663C4.4465 26.6663 3.99984 26.221 3.99984 25.6663C3.99984 25.3903 4.1145 25.1143 4.33717 24.917L7.58784 22.0597C5.7025 20.5503 4.08517 18.657 2.8585 16.689C2.7305 16.477 2.6665 16.2383 2.6665 15.9997C2.6665 15.761 2.73184 15.5223 2.85984 15.3103C5.6745 10.7903 10.5598 6.66634 15.9972 6.66634C18.4172 6.66634 20.7118 7.45701 22.7585 8.72767ZM25.8492 11.1677C27.1385 12.425 28.2545 13.8517 29.1492 15.3237C29.2718 15.5317 29.3332 15.7663 29.3332 15.9997C29.3332 16.233 29.2718 16.4677 29.1492 16.6757C26.3918 21.213 21.5212 25.333 15.9972 25.333C14.2665 25.333 12.5932 24.9157 11.0238 24.201L14.5225 21.125C14.9918 21.261 15.4878 21.333 15.9998 21.333C18.9438 21.333 21.3332 18.9437 21.3332 15.9997C21.3332 15.725 21.3118 15.4557 21.2718 15.1917L25.8492 11.1677ZM19.2732 11.7903C18.3692 11.0863 17.2332 10.6663 15.9998 10.6663C13.0558 10.6663 10.6665 13.0557 10.6665 15.9997C10.6665 16.9877 10.9358 17.913 11.4038 18.7063L12.9505 17.3477C12.7678 16.9343 12.6665 16.4797 12.6665 15.9997C12.6665 14.1597 14.1598 12.6663 15.9998 12.6663C16.6318 12.6663 17.2238 12.8423 17.7278 13.149L19.2732 11.7903Z" fill="#202020"/>
+            <svg class="hide-password-icon" data-show-password-target="hideIcon" style="display: none;" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <line x1="7.64315" y1="28.4933" x2="20.0066" y2="2.2608" stroke="#202020" stroke-width="3"/>
+              <path d="M22.1016 8.34375C25.0132 9.96161 27.4726 12.565 29.1494 15.3242C29.2719 15.5321 29.333 15.7668 29.333 16C29.333 16.2334 29.272 16.4688 29.1494 16.6768C26.392 21.2141 21.521 25.334 15.9971 25.334C15.3793 25.334 14.7692 25.2778 14.168 25.1768L15.9795 21.333C15.9863 21.333 15.9932 21.334 16 21.334C18.9439 21.3339 21.333 18.9439 21.333 16C21.3329 14.7041 20.8691 13.5162 20.0996 12.5918L22.1016 8.34375ZM15.9971 6.66699C17.1437 6.66699 18.2615 6.84701 19.3389 7.16895L17.5781 10.9053C17.0793 10.7508 16.5494 10.667 16 10.667C13.0561 10.667 10.6672 13.0561 10.667 16C10.667 17.864 11.6252 19.5052 13.0752 20.459L11.2617 24.3047C7.797 22.8028 4.8234 19.8435 2.8584 16.6895C2.73049 16.4775 2.66602 16.2386 2.66602 16C2.66607 15.7615 2.73143 15.5225 2.85938 15.3105C5.67402 10.7906 10.5598 6.66706 15.9971 6.66699ZM19.0859 14.7422C19.2445 15.1305 19.333 15.5549 19.333 16C19.333 17.494 18.3484 18.7594 16.9932 19.1826L19.0859 14.7422ZM16 12.667C16.244 12.667 16.4818 12.6933 16.7109 12.7432L13.9414 18.6201C13.1659 18.0094 12.667 17.0629 12.667 16C12.6672 14.1601 14.1601 12.667 16 12.667Z" fill="#202020"/>
             </svg>
           </button>
         </div>
       </div>
       <hr>
-      <h2>Profil privé</h2>
+      <h2><%= t('edit_profile.private_profile') %></h2>
       <div class="field">
-        <%= f.label "Email" %>
+        <%= f.label t('edit_profile.email') %>
         <%= f.email_field :email, autocomplete: "email" %>
       </div>
       <div class="field">
-        <%= f.label "Statut" %>
+        <%= f.label t('edit_profile.status') %>
         <%= f.collection_select :statut, 
         [
-          ["Étudiant", "Étudiant"], 
-          ["Enseignant", "Enseignant"], 
-          ["Entreprise", "Entreprise"],
-          ["Association", "Association"],
-          ["Designer", "Designer"],
-          ["Artiste", "Artiste"],
-           ["Autre", "Autre"],
-        ], :first, :last, { prompt: "Choisissez un statut*" }, { class: "form-control" } %>
+         [t('edit_profile.student'),    'Student'],
+        [t('edit_profile.teacher'),    'Teacher'],
+        [t('edit_profile.company'),    'Company'],
+        [t('edit_profile.association'),'Association'],
+        [t('edit_profile.designer'),   'Designer'],
+        [t('edit_profile.artist'),     'Artist'],
+        [t('edit_profile.other'),      'Other']
+        ], :first, :last, { prompt: t('edit_profile.choose_status') }, { class: "form-control" } %>
 
       </div>
       <div class="field">
-        <%= f.label "Établissement" %>
-        <%= f.collection_select :etablissement_id, Etablissement.order(:city), :id, :all_info, { prompt: "Choisissez un établissement" } %>
+        <%= f.label :etablissement_id, t('edit_profile.institution') %>
+        <%= f.collection_select :etablissement_id,
+        Etablissement.order(:city),
+        :id,
+        :all_info,
+        { prompt: t('edit_profile.choose_institution') },
+        { class: 'form-control' } %>
       </div>
       <hr>
       <div class="field">
-        <%= f.label "Mot de passe actuel" %>
-        <i>(entrer votre mot de passe pour modifier votre profil)</i>
+        <%= f.label :current_password, t('edit_profile.current_password') %>
+         <i><%= t('edit_profile.current_password_hint') %></i>
         <div class="password-container" data-controller="show-password">
   <%= f.password_field :current_password, 
         autocomplete: "current-password", 
@@ -135,22 +142,26 @@
           <button type="button" 
           data-action="click->show-password#toggle"
           class="toggle-password">
-            <svg class="show-password-icon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="show-password-icon" data-show-password-target="showIcon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M15.9972 6.66699C10.5598 6.66699 5.6745 10.791 2.85984 15.311C2.73184 15.523 2.6665 15.7617 2.6665 16.0003C2.6665 16.239 2.7305 16.4777 2.8585 16.6897C5.6745 21.2097 10.5598 25.3337 15.9972 25.3337C21.5212 25.3337 26.3918 21.2137 29.1492 16.6763C29.2718 16.4683 29.3332 16.2337 29.3332 16.0003C29.3332 15.767 29.2718 15.5323 29.1492 15.3243C26.3918 10.787 21.5212 6.66699 15.9972 6.66699ZM15.9998 10.667C18.9438 10.667 21.3332 13.0563 21.3332 16.0003C21.3332 18.9443 18.9438 21.3337 15.9998 21.3337C13.0558 21.3337 10.6665 18.9443 10.6665 16.0003C10.6665 13.0563 13.0558 10.667 15.9998 10.667ZM15.9998 12.667C17.8398 12.667 19.3332 14.1603 19.3332 16.0003C19.3332 17.8403 17.8398 19.3337 15.9998 19.3337C14.1598 19.3337 12.6665 17.8403 12.6665 16.0003C12.6665 14.1603 14.1598 12.667 15.9998 12.667Z" fill="#202020"/>
             </svg>
-            <svg class="hide-password-icon" style="display: none;" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M22.7585 8.72767L26.3372 5.58234C26.5278 5.41567 26.7638 5.33301 26.9998 5.33301C27.5572 5.33301 27.9998 5.78634 27.9998 6.33301C27.9998 6.60901 27.8852 6.88501 27.6612 7.08234L5.66117 26.417C5.47184 26.585 5.23584 26.6663 4.99984 26.6663C4.4465 26.6663 3.99984 26.221 3.99984 25.6663C3.99984 25.3903 4.1145 25.1143 4.33717 24.917L7.58784 22.0597C5.7025 20.5503 4.08517 18.657 2.8585 16.689C2.7305 16.477 2.6665 16.2383 2.6665 15.9997C2.6665 15.761 2.73184 15.5223 2.85984 15.3103C5.6745 10.7903 10.5598 6.66634 15.9972 6.66634C18.4172 6.66634 20.7118 7.45701 22.7585 8.72767ZM25.8492 11.1677C27.1385 12.425 28.2545 13.8517 29.1492 15.3237C29.2718 15.5317 29.3332 15.7663 29.3332 15.9997C29.3332 16.233 29.2718 16.4677 29.1492 16.6757C26.3918 21.213 21.5212 25.333 15.9972 25.333C14.2665 25.333 12.5932 24.9157 11.0238 24.201L14.5225 21.125C14.9918 21.261 15.4878 21.333 15.9998 21.333C18.9438 21.333 21.3332 18.9437 21.3332 15.9997C21.3332 15.725 21.3118 15.4557 21.2718 15.1917L25.8492 11.1677ZM19.2732 11.7903C18.3692 11.0863 17.2332 10.6663 15.9998 10.6663C13.0558 10.6663 10.6665 13.0557 10.6665 15.9997C10.6665 16.9877 10.9358 17.913 11.4038 18.7063L12.9505 17.3477C12.7678 16.9343 12.6665 16.4797 12.6665 15.9997C12.6665 14.1597 14.1598 12.6663 15.9998 12.6663C16.6318 12.6663 17.2238 12.8423 17.7278 13.149L19.2732 11.7903Z" fill="#202020"/>
+            <svg class="hide-password-icon" data-show-password-target="hideIcon" style="display: none;" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <line x1="7.64315" y1="28.4933" x2="20.0066" y2="2.2608" stroke="#202020" stroke-width="3"/>
+              <path d="M22.1016 8.34375C25.0132 9.96161 27.4726 12.565 29.1494 15.3242C29.2719 15.5321 29.333 15.7668 29.333 16C29.333 16.2334 29.272 16.4688 29.1494 16.6768C26.392 21.2141 21.521 25.334 15.9971 25.334C15.3793 25.334 14.7692 25.2778 14.168 25.1768L15.9795 21.333C15.9863 21.333 15.9932 21.334 16 21.334C18.9439 21.3339 21.333 18.9439 21.333 16C21.3329 14.7041 20.8691 13.5162 20.0996 12.5918L22.1016 8.34375ZM15.9971 6.66699C17.1437 6.66699 18.2615 6.84701 19.3389 7.16895L17.5781 10.9053C17.0793 10.7508 16.5494 10.667 16 10.667C13.0561 10.667 10.6672 13.0561 10.667 16C10.667 17.864 11.6252 19.5052 13.0752 20.459L11.2617 24.3047C7.797 22.8028 4.8234 19.8435 2.8584 16.6895C2.73049 16.4775 2.66602 16.2386 2.66602 16C2.66607 15.7615 2.73143 15.5225 2.85938 15.3105C5.67402 10.7906 10.5598 6.66706 15.9971 6.66699ZM19.0859 14.7422C19.2445 15.1305 19.333 15.5549 19.333 16C19.333 17.494 18.3484 18.7594 16.9932 19.1826L19.0859 14.7422ZM16 12.667C16.244 12.667 16.4818 12.6933 16.7109 12.7432L13.9414 18.6201C13.1659 18.0094 12.667 17.0629 12.667 16C12.6672 14.1601 14.1601 12.667 16 12.667Z" fill="#202020"/>
             </svg>
           </button>
         </div>
       </div>
       <div class="actions">
-        <%= f.submit "Mettre à jour", class: "button large maj dark" %>
+        <%= f.submit  t('edit_profile.update_button'), class: "button large maj dark" %>
       </div>
     </div>
   <% end %>
   <div display="flex">
-    <%= button_to "Supprimer votre compte", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: "button delete delete-account" %>
+   <%= button_to t('edit_profile.delete_account'), registration_path(resource_name),
+      data: { confirm: t('edit_profile.confirm_delete') }, method: :delete,
+      class: "button delete delete-account" %>
+
   </div>
 </section>
 <script>
