--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,41 +23,37 @@
  *= require pagination
 */
 
+@import "abstracts/variables";
 
+@import "base/reset";
+@import "base/font";
 
-@import 'abstracts/variables';
+@import "components/alert";
+@import "components/button";
+@import "components/card";
+@import "components/cardref";
+@import "components/form";
+@import "components/listcard";
+@import "components/listmodal";
+@import "components/loader";
+@import "components/navprofil";
+@import "components/popup";
+@import "components/progressbar";
 
-@import 'base/reset';
-@import 'base/font';
+@import "layout/header";
+@import "layout/search";
 
-@import 'components/alert';
-@import 'components/button';
-@import 'components/card';
-@import 'components/cardref';
-@import 'components/form';
-@import 'components/listcard';
-@import 'components/listmodal';
-@import 'components/loader';
-@import 'components/navprofil';
-@import 'components/popup';
-@import 'components/progressbar';
-
-@import 'layout/header';
-@import 'layout/search';
-
-@import 'pages/defaultpage';
-@import 'pages/homepage';
-@import 'pages/kitpresse';
-@import 'pages/list';
-@import 'pages/log';
-@import 'pages/notification';
-@import 'pages/parrainage';
-@import 'pages/presentation';
-@import 'pages/profil';
-@import 'pages/reference';
-@import 'pages/searchpage';
-
-
+@import "pages/defaultpage";
+@import "pages/homepage";
+@import "pages/kitpresse";
+@import "pages/list";
+@import "pages/log";
+@import "pages/notification";
+@import "pages/parrainage";
+@import "pages/presentation";
+@import "pages/profil";
+@import "pages/reference";
+@import "pages/searchpage";
 
 html {
   overflow-x: hidden;
@@ -84,25 +80,16 @@ main {
 }
 
 .form-step h3 {
-  color: #FFF;
+  color: #fff;
   margin-top: 0;
   padding: 48px 0;
+}
+.form-step textarea {
+  width: auto;
 }
 
 .grid-1 {
   padding: 0 10vw 64px 10vw;
-}
-
-@media screen and (max-width: 425px) {
-  .grid-1 {
-    padding: 0 5vw 32px 5vw;
-  }
-}
-
-@media screen and (min-width:426px) and (max-width: 1024px) {
-  .grid-1 {
-    padding: 0 8vw 52px 8vw;
-  }
 }
 
 /* Home Page */
@@ -111,12 +98,12 @@ main {
   font-size: 20px;
   font-weight: 500;
   margin-top: 24px;
-  color: #FFF;
+  color: #fff;
 }
 
 .subtitle {
   width: 50vw;
-  color: #E9E9E9;
+  color: #e9e9e9;
   line-height: 125%;
 }
 
@@ -141,7 +128,7 @@ main {
   }
 }
 
-@media screen and (min-width:769px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   main {
     margin-left: 30vw;
     width: 70vw;
@@ -167,13 +154,12 @@ main {
   }
 }
 
-
 .top-header {
   padding: 0 10vw;
   padding-top: 96px;
   padding-bottom: 72px;
   background-color: #202020;
-  color: #FFF;
+  color: #fff;
   position: relative;
 
   h1 {
@@ -181,7 +167,7 @@ main {
   }
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width: 600px) {
   .top-header {
     padding: 0 5vw;
     padding-top: 64px;
@@ -189,14 +175,13 @@ main {
   }
 }
 
-@media screen and (min-width:601px) and (max-width:800px) {
+@media screen and (min-width: 601px) and (max-width: 800px) {
   .top-header {
     padding: 0 8vw;
     padding-top: 72px;
     padding-bottom: 64px;
   }
 }
-
 
 body {
   background-color: $background-color;
@@ -228,4 +213,28 @@ body.dark-mode {
   padding: 5px 10px;
   border: none;
   margin: 5px;
+}
+
+@media screen and (max-width: 425px) {
+  .grid-1 {
+    padding: 0 5vw 32px 5vw;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 1024px) {
+  .grid-1 {
+    padding: 0 8vw 52px 8vw;
+  }
+}
+
+@media screen and (min-width: 1700px) {
+  .grid-1 {
+    padding: 0 15vw 64px 15vw;
+  }
+
+  .top-header {
+    padding: 0 15vw;
+    padding-top: 96px;
+    padding-bottom: 72px;
+  }
 }
