--- a/app/assets/stylesheets/layout/_search.scss
+++ b/app/assets/stylesheets/layout/_search.scss
@@ -1,4 +1,4 @@
-@import 'abstracts/variables';
+@import "abstracts/variables";
 
 .top-bar-search {
   position: fixed;
@@ -87,15 +87,14 @@
   background: #555;
 }
 
-@media screen and (min-width:769px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .top-bar-search {
     width: 54vw;
     padding: 0 8vw;
   }
 }
 
-
-@media screen and (min-width:426px) and (max-width: 768px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .top-bar-search {
     width: 84vw;
     padding: 0 8vw;
@@ -114,7 +113,7 @@
   }
 }
 
-@media screen and (min-width:0px) and (max-width: 425px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .top-bar-search {
     width: 90vw;
     padding: 0 5vw;
@@ -134,10 +133,9 @@
   }
 }
 
-
 .top-bar-search {
   background-color: $background-color;
-  border-bottom: 1px solid #E9E9E9;
+  border-bottom: 1px solid #e9e9e9;
 }
 
 body.dark-mode {
@@ -171,5 +169,64 @@ body.dark-mode {
 
   .top-bar-flex {
     color: $text-color-dark; // Couleur des éléments flex en mode sombre
+  }
+}
+
+.lang-switcher {
+  display: inline-flex;
+  align-items: center;
+  background-color: $primary-color;
+  color: $secondary-color;
+  padding: 10px 18px;
+  border-radius: 40px;
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  position: relative;
+}
+
+.lang-icon {
+  margin-right: 8px;
+}
+
+.lang-arrow {
+  margin-left: 6px;
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+.lang-switcher.open .lang-arrow {
+  transform: rotate(180deg);
+}
+
+.lang-dropdown {
+  display: none;
+  position: absolute;
+  top: 110%;
+  left: 0;
+  background: #1c1c1c;
+  border-radius: 8px;
+  overflow: hidden;
+  width: 100%;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.lang-switcher.open .lang-dropdown {
+  display: block;
+}
+
+.lang-option {
+  padding: 10px 18px;
+  color: #fff;
+  cursor: pointer;
+  text-align: left;
+  display: block;
+
+  &:hover {
+    background-color: #3c3c3c;
+  }
+
+  &:active {
+    background-color: #1b1b1b;
   }
 }
