--- a/app/views/bug_reports/new.html.erb
+++ b/app/views/bug_reports/new.html.erb
@@ -9,16 +9,18 @@
       <path d="M12.632 6.94488C12.632 6.94488 6.63067 12.9516 4.29333 15.2902C4.09733 15.4849 4 15.7409 4 15.9969C4 16.2529 4.09733 16.5089 4.29333 16.7035C6.62933 19.0422 12.6293 25.0462 12.6293 25.0462C12.8227 25.2395 13.0773 25.3355 13.332 25.3355C13.5867 25.3342 13.8427 25.2369 14.0387 25.0409C14.4293 24.6502 14.4307 24.0196 14.044 23.6316L7.40933 16.9969H26.9987C27.5507 16.9969 27.9987 16.5489 27.9987 15.9969C27.9987 15.4449 27.5507 14.9969 26.9987 14.9969H7.40933L14.0467 8.35822C14.432 7.97288 14.4293 7.34355 14.0387 6.95288C13.8427 6.75688 13.5867 6.65822 13.332 6.65822C13.0773 6.65688 12.8253 6.75288 12.632 6.94488Z" fill="white"/>
     </svg>
   <% end %>
-  <p class="subtitle-top">Votre contribution</p>
-  <h1>Signaler un problème</h1>
-  <p class="subtitle">Si vous rencontrez un problème avec notre site, une fonctionnalité ou un service, nous vous invitons à nous en informer afin que nous puissions résoudre rapidement la situation. </p>
+<p class="subtitle-top"><%= t('bug_report.subtitle_top') %></p>
+  <h1><%= t('bug_report.title') %></h1>
+  <p class="subtitle"><%= t('bug_report.description') %></p>
 </section>
 <section class="grid-1">
-  <h2>Votre aide nous est précieuse</h2>
+    <h2><%= t('bug_report.help_title') %></h2>
   <%= form_with(model: @bug_report, local: true, data: { turbo: false }) do |form| %>
     <% if @bug_report.errors.any? %>
       <div id="error_explanation">
-        <h2><%= pluralize(@bug_report.errors.count, "error") %> prohibited this bug report from being saved:</h2>
+        <h2>
+          <%= t('bug_report.errors_title', count: @bug_report.errors.count) %>
+        </h2>
         <ul>
           <% @bug_report.errors.full_messages.each do |message| %>
             <li><%= message %></li>
@@ -27,14 +29,14 @@
       </div>
     <% end %>
     <div class="flex-form">
-      <div class="field">
-        <%= form.text_area :description, placeholder: "Description du problème" %>
+       <div class="field">
+        <%= form.text_area :description, placeholder: t('bug_report.placeholder_description') %>
       </div>
       <div class="field">
-        <%= form.text_field :url, value: params[:url], placeholder: "Url d’où se situe le bug (ou liens vers une image)" %>
+        <%= form.text_field :url, value: params[:url], placeholder: t('bug_report.placeholder_url') %>
       </div>
       <div class="actions">
-        <%= form.submit "Envoyer", class: "button large dark" %>
+        <%= form.submit t('bug_report.submit_button'), class: "button large dark" %>
       </div>
     </div>
   <% end %>
