--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,6 +1,7 @@
 <section class="grid-1" style="height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; gap:16px">
   <%= image_tag "500.svg", alt: "", class: "home-index" %>
-  <p class="subtitle-top" style="color: #202020;">Erreur 500</p>
-  <h1 class="center">Oups ! Une erreur interne du serveur s'est produite.</h1>
-  <%= link_to 'Retour à l\'accueil', root_path, class: "button dark" %>
+  
+  <p class="subtitle-top" style="color: #202020;"><%= t('errors.500.subtitle') %></p>
+  <h1 class="center"><%= t('errors.500.title') %></h1>
+  <%= link_to t('errors.500.back_home'), root_path, class: "button dark" %>
 </section>
