--- a/app/views/pages/kit-presse.html.erb
+++ b/app/views/pages/kit-presse.html.erb
@@ -1,74 +1,72 @@
+<% content_for :title, "Kit de presse - Omniscient Design" %>
+<% content_for :description, "Téléchargez notre kit de presse pour faire rayonner Omniscient design, le premier carnet de référence numérique" %>
 <section class="top-header">
   <%= link_to profil_path do %>
     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M12.632 6.94488C12.632 6.94488 6.63067 12.9516 4.29333 15.2902C4.09733 15.4849 4 15.7409 4 15.9969C4 16.2529 4.09733 16.5089 4.29333 16.7035C6.62933 19.0422 12.6293 25.0462 12.6293 25.0462C12.8227 25.2395 13.0773 25.3355 13.332 25.3355C13.5867 25.3342 13.8427 25.2369 14.0387 25.0409C14.4293 24.6502 14.4307 24.0196 14.044 23.6316L7.40933 16.9969H26.9987C27.5507 16.9969 27.9987 16.5489 27.9987 15.9969C27.9987 15.4449 27.5507 14.9969 26.9987 14.9969H7.40933L14.0467 8.35822C14.432 7.97288 14.4293 7.34355 14.0387 6.95288C13.8427 6.75688 13.5867 6.65822 13.332 6.65822C13.0773 6.65688 12.8253 6.75288 12.632 6.94488Z" fill="white"/>
     </svg>
   <% end %>
-  <p class="subtitle-top">Presse</p>
-  <h1>Kit de presse</h1>
-  <p class="subtitle">Téléchargez le logo, des screenshots ou encore le dossier de présentation de Omniscient Design pour partager la plateforme</p>
+  <p class="subtitle-top"><%= t('press.subtitle_top') %></p>
+  <h1><%= t('press.title') %></h1>
+  <p class="subtitle"><%= t('press.description') %></p>
 </section>
 <section class="grid-1">
-<%= link_to "Télécharger le kit de presse (18,1Mo)", "/kit-presse.zip", 
-    class: "button dark button-kit", 
-    download: "kit-presse-omniscient-design.zip" %>
-
-  <h2>Logos</h2>
+  <%= link_to t('press.download_button'), "/kit-presse.zip",
+      class: "button dark button-kit",
+      download: "kit-presse-omniscient-design.zip" %>
+  <h2><%= t('press.logos') %></h2>
   <div class="flex-kit">
     <div class="logo-kit-container">
-    <%= image_tag "kit_presse/logo1.svg", alt: "Logo 1", class: "logo-kit" %>
-    <p >4ko</p>
-  </div>
+      <%= image_tag "kit_presse/logo1.svg", alt: "Logo 1", class: "logo-kit" %>
+      <p><%= t('press.file_size.logo1') %></p>
+    </div>
     <div class="logo-kit-container">
-    <%= image_tag "kit_presse/logo2.svg", alt: "Logo 2", class: "logo-kit" %>
-     <p >4ko</p>
-  </div>
+      <%= image_tag "kit_presse/logo2.svg", alt: "Logo 2", class: "logo-kit" %>
+      <p><%= t('press.file_size.logo2') %></p>
+    </div>
     <div class="logo-kit-container">
-    <%= image_tag "kit_presse/logo3.svg", alt: "Logo 3", class: "logo-kit" %>
-    <p >16ko</p>
+      <%= image_tag "kit_presse/logo3.svg", alt: "Logo 3", class: "logo-kit" %>
+      <p><%= t('press.file_size.logo3') %></p>
+    </div>
   </div>
-  </div>
-
-
-
-
-  <h2>Screenshots</h2>
+  <h2><%= t('press.screenshots') %></h2>
   <div class="flex-kit">
     <div class="screen-kit">
       <%= image_tag "kit_presse/screenshot1", 
         alt: "Screenshot", 
         class: "w-full max-w-md h-auto border border-black mx-auto" %>
-
-        <p >176ko</p>
+        <p><%= t('press.file_size.screenshot1') %></p>
       </div>
     <div class="screen-kit">
        <%= image_tag "kit_presse/screenshot2", alt: "Screenshot", class: "w-full max-w-md h-auto border border-black mx-auto" %>
-        <p >397ko</p>
+        <p><%= t('press.file_size.screenshot2') %></p>
       </div>
-          <div class="screen-kit">
-       <%= image_tag "kit_presse/screenshot3", alt: "Screenshot", class: "w-full max-w-md h-auto border border-black mx-auto" %>
-        <p >209ko</p>
-      </div>
+    <div class="screen-kit">
+      <%= image_tag "kit_presse/screenshot3", alt: "Screenshot", class: "w-full max-w-md h-auto border border-black mx-auto" %>
+      <p><%= t('press.file_size.screenshot3') %></p>
+    </div>
           <div class="screen-kit">
        <%= image_tag "kit_presse/screenshot4", alt: "Screenshot", class: "w-full max-w-md h-auto border border-black mx-auto" %>
-        <p >135ko</p>
+        <p><%= t('press.file_size.screenshot4') %></p>
       </div>
           <div class="screen-kit">
        <%= image_tag "kit_presse/screenshot5", alt: "Screenshot", class: "w-full max-w-md h-auto border border-black mx-auto" %>
-        <p >164ko</p>
+       <p><%= t('press.file_size.screenshot5') %></p>
       </div>
           <div class="screen-kit">
        <%= image_tag "kit_presse/screenshot6", alt: "Screenshot", class: "w-full max-w-md h-auto border border-black mx-auto" %>
-        <p >41ko</p>
+        <p><%= t('press.file_size.screenshot6') %></p>
       </div>
           <div class="screen-kit">
        <%= image_tag "kit_presse/screenshot7", alt: "Screenshot", class: "w-full max-w-md h-auto border border-black mx-auto" %>
-        <p >53ko</p>
+        <p><%= t('press.file_size.screenshot7') %></p>
       </div>
     </div>
-  <h2>Dossier de présentation</h2>
+  <h2><%= t('press.presentation_folder') %></h2>
   <div class="screen-kit">
-    <%= image_tag "kit_presse/cover-dossier.jpg", alt: "Page de couverture du dossier de présentation", class: "kit-dossier-img" %>
-    <p >18,8Mo</p>
+    <%= image_tag "kit_presse/cover-dossier.jpg",
+        alt: "Page de couverture du dossier de présentation",
+        class: "kit-dossier-img" %>
+    <p><%= t('press.file_size.dossier') %></p>
   </div>
 </section>
