--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,13 +1,26 @@
 <div class="log" style="background-color:#202020; color:#FFF; min-height:100vh;">
+  <div class="flex-back-btn">
+    <button
+      id="back-btn"
+      data-controller="back" 
+      data-back-fallback-url-value="https://omniscient-design.fr/oeuvres" 
+      data-action="click->back#handleClick">
+        <div class="circle-back">
+          <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12.632 6.94488C12.632 6.94488 6.63067 12.9516 4.29333 15.2902C4.09733 15.4849 4 15.7409 4 15.9969C4 16.2529 4.09733 16.5089 4.29333 16.7035C6.62933 19.0422 12.6293 25.0462 12.6293 25.0462C12.8227 25.2395 13.0773 25.3355 13.332 25.3355C13.5867 25.3342 13.8427 25.2369 14.0387 25.0409C14.4293 24.6502 14.4307 24.0196 14.044 23.6316L7.40933 16.9969H26.9987C27.5507 16.9969 27.9987 16.5489 27.9987 15.9969C27.9987 15.4449 27.5507 14.9969 26.9987 14.9969H7.40933L14.0467 8.35822C14.432 7.97288 14.4293 7.34355 14.0387 6.95288C13.8427 6.75688 13.5867 6.65822 13.332 6.65822C13.0773 6.65688 12.8253 6.75288 12.632 6.94488Z" fill="white"/>
+          </svg>
+        </div>
+    </button>
+  </div>
   <section class="box-log">
-    <h1>Mot de passe oublié ?</h1>
+    <h1><%= t('devise.password_reset.title') %></h1>
     <div class="form">
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
         <div class="field">
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: t('devise.password_reset.email_placeholder') %>
         </div>
         <div class="actions">
-          <%= f.submit "Recevoir les instructions", class:"button dark btn-login" %>
+          <%= f.submit t('devise.password_reset.submit'), class:"button dark btn-login" %>
         </div>
       <% end %>
     </div>
